gitops-demo/rollout.yaml
apiVersion: rollouts.kruise.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  annotations:
    rollouts.kruise.io/rolling-style: partition
spec:
  objectRef:
    workloadRef:
      apiVersion: apps/v1
      kind: Deployment
      name: echo-server
  strategy:
    canary:
      steps:
      - replicas: 10%
        weight: 5
      - replicas: 20%
        weight: 20
        pause:
          duration: 60
      - replicas: 50%
        weight: 50
        pause:
          duration: 60
      - replicas: 100%
        weight: 100
        pause:
          duration: 60
      trafficRoutings:
      - service: echo-server
        ingress:
          classType: nginx
          name: ingress-demo
