gitops-demo/echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  labels:
    app: echo-server
spec:
  selector:
    matchLabels:
      app: echo-server
  replicas: 10
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: cilium/echoserver:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  labels:
    app: echo-server
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: echo-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /apis/echo
        pathType: Prefix
        backend:
          service:
            name: echo-server
            port:
              number: 8080
